--- a/css/main.css
+++ b/css/main.css
@@ -120,7 +120,7 @@ main .first {
       -ms-flex-align: center;
           align-items: center;
   height: 90vh;
-  background-image: url("../imgs/background - copia.jpg");
+  background-image: url("../imgs/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
