--- a/css/main.scss
+++ b/css/main.scss
@@ -99,7 +99,7 @@ main{
         align-items: center;
         height: 90vh;
        
-        background-image: url('../imgs/background\ -\ copia.jpg');
+        background-image: url('../imgs/background.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
