--- a/css/main.scss
+++ b/css/main.scss
@@ -210,12 +210,12 @@ footer{
         .first{
             h1{
                 font-size: 4rem;
-                margin-right: 5rem;
+                margin-right: 4rem;
             }
             p{
-              
+                margin-top: 0;
                 font-size: 2rem;
-                margin-right: 3rem;
+                margin-right: 2rem;
             }
         }
         .second{
