--- a/css/main.css
+++ b/css/main.css
@@ -231,11 +231,13 @@ footer div p {
 @media all and (min-width: 576px) {
   main .first h1 {
     font-size: 4rem;
-    margin-right: 15rem;
+    margin-bottom: 0;
+    margin-right: 4rem;
   }
   main .first p {
+    margin-top: 0;
     font-size: 2rem;
-    margin-right: 10rem;
+    margin-right: 2rem;
   }
   main .second h2 {
     font-size: 3rem;
