--- a/css/main.scss
+++ b/css/main.scss
@@ -210,6 +210,7 @@ footer{
         .first{
             h1{
                 font-size: 4rem;
+                margin-bottom: 0;
                 margin-right: 4rem;
             }
             p{
