--- a/css/main.scss
+++ b/css/main.scss
@@ -211,12 +211,13 @@ footer{
             h1{
                 font-size: 4rem;
                 margin-bottom: 0;
-                margin-right: 4rem;
+                margin-right: 2rem;
             }
             p{
                 margin-top: 0;
+                padding-top: 1rem;
                 font-size: 2rem;
-                margin-right: 2rem;
+                margin-right: 1rem;
             }
         }
         .second{
